--- a/main.tex
+++ b/main.tex
@@ -485,7 +485,7 @@ What follows are notes from other talks I've given about quasi-relevant material
 
 
 
-\include{dreck}
+%\include{dreck}
 
 
 \end{document}
