--- a/main.tex
+++ b/main.tex
@@ -77,6 +77,7 @@
 \newcommand{\perf}{\mathrm{perf}}
 \newcommand{\gpd}{\mathrm{gpd}}
 \newcommand{\id}{\mathrm{id}}
+\renewcommand{\div}{\mathrm{div}}
 
 \DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\Spf}{Spf}
