write down leftovers from the board before heading home

--- a/quillen.tex
+++ b/quillen.tex
@@ -220,6 +220,8 @@ Now let $j: C \to \Div C$ be the usual inclusion, and for a point $a \in C(R)$ s
 
 \todo{This is still missing a little.  Include how you take a meromorphic function and build a line bundle?}
 
+\todo{FPFP section 17 is also a reference for this. It's a lot shorter than Chapter 5 of FSFG. Strip it for ideas.}
+
 
 
 
@@ -328,6 +330,14 @@ The map $Y_E \xrightarrow{f_\xi} X_E$ pulls $\P(\xi)_E$ back to give \[Y_E \time
 For $E$ a complex-orientable ring spectrum, there is a natural isomorphism \[BU(n)_E \cong \Div_n^+ \CP^\infty_E. \qed \]
 \end{theorem}
 
+\begin{theorem}
+There are natural isomorphisms $(BU \times \Z)_E \cong \Div \CP^\infty_E$ and $BU_E \cong \Div_0 \CP^\infty_E$. \qed
+\end{theorem}
+
+\begin{corollary}
+$(BU \times \Z)_E$ is the free formal group on the curve $\CP^\infty_E$.
+\end{corollary}
+
 
 \todo{This day should probably have fewer proofs of facts about vector bundles, which will be standard to anyone reading these notes, and more of a discussion about why divisors are called divisors.  Maybe we should even compare Cartier divisors and Weil divisors?  That's discussed in Neil's FPFP paper.}
 
@@ -342,7 +352,7 @@ For $E$ a complex-orientable ring spectrum, there is a natural isomorphism \[BU(
 
 
 
-\section{Operations}
+\section{Operations and a model for cobordism}
 
 Our eventual goal, like last time, is to give an algebro-geometric description of $MU_*(*)$ and of the cooperations $MU_* MU$.  There is such a description that passes through the Adams spectral sequence, also like last time, but $MU_*(*)$ is an integral algebra and so we cannot make do with working out the mod--$2$ Adams spectral sequence.  We would have to at least work out the mod--$p$ Adams spectral sequence for every $p$, but there is the following unfortunate theorem:
 \begin{theorem}
