--- a/quillen.tex
+++ b/quillen.tex
@@ -186,7 +186,7 @@ We define the following variants of ``stable divisor schemes'':
 \end{definition}
 
 \begin{theorem}
-The scheme $\Div^+ C$ models the free formal monoid on the formal curve $C$.  The scheme $\Div C$ models the free formal group on the formal curve $C$.  The scheme $\Div_0 C$ simultaneously models the free formal monoid and the free formal group on the \emph{pointed} formal curve $C$. \qed \todo{Can you at least see where the negation maps would come from w/o reference to coalgebras?}
+The scheme $\Div^+ C$ models the free formal monoid on the formal curve $C$.  The scheme $\Div C$ models the free formal group on the formal curve $C$.  The scheme $\Div_0 C$ simultaneously models the free formal monoid and the free formal group on the \emph{pointed} formal curve $C$. \qed \todo{Can you at least see where the negation maps would come from w/o reference to coalgebras? (See FPFP Prop 18.1?)}
 \end{theorem}
 \noindent We will postpone the proof of this theorem until later, once we've developed a theory of coalgebraic formal schemes.\oweproof{The various $\Div$ constructions give free monoids / groups}
 
@@ -220,7 +220,7 @@ Now let $j: C \to \Div C$ be the usual inclusion, and for a point $a \in C(R)$ s
 
 \todo{This is still missing a little.  Include how you take a meromorphic function and build a line bundle?}
 
-\todo{FPFP section 17 is also a reference for this. It's a lot shorter than Chapter 5 of FSFG. Strip it for ideas.}
+\todo{FPFP section 17 is also a reference for this. It's a lot shorter than Chapter 5 of FSFG. Strip it for ideas. The main one seems to be an abbreviated statement of the Weierstrass decomposition of a meromorphic function.}
 
 
 
@@ -362,15 +362,29 @@ with $|\xi_j| = 2p^j-2$ and $|\tau_j| = 2p^j - 1$. \qed
 \end{theorem}
 \noindent Because we are no longer working in characteristic $2$ and because there are odd--dimensional classes in this algebra, we see that the dual mod--$p$ Steenrod algebra is \emph{graded-commutative}.  This is the first time we have encountered Hindrance \#\ref{SkewCommutativeDeficiency} from \Cref{TheSteenrodAlgebraSection} in the wild, and for now we will simply avoid these methods and find another approach.
 
-There is such an alternative proof, due to Quillen, that bypasses the Adams spectral sequence.  This approach has some deficiencies of its own: it requires studying the algebra of operations $MU^* MU$, which we do not expect to be at all commutative, and it requires studying \textit{power operations}, which are in general very technical creatures.  However, we will eventually want to talk about power operations anyway, and because this is the road less traveled we will elect to take it.
+There is such an alternative proof, due to Quillen, that bypasses the Adams spectral sequence.  This approach has some deficiencies of its own: it requires studying the algebra of operations $MU^* MU$, which we do not expect to be at all commutative, and it requires studying \textit{power operations}, which are in general very technical creatures.  However, we will eventually want to talk about power operations anyway, and because this is the road less traveled we will elect to take it.  Our job today is to define these two kinds of cohomology operations, as well as revisit the model of complex cobordism Quillen uses.
 
-Our job today is to define these two kinds of cohomology operations, as well as revisit the model of complex cobordism Quillen uses.
+The description of the first class of operations follows immediately from our discussion of complex cobordism up to this point, so we will begin there.  We learned last time that for any complex-orientable cohomology theory $E$ we have the calculation \[E^* BU \cong E^*\llbracket \sigma_1, \sigma_2, \ldots, \sigma_j, \ldots\rrbracket,\] and we gave a rich interpretation of this in terms of divisor schemes: \[BU_E \cong \Div_0 \CP^\infty_E.\]  Two lectures ago, we learned that the stable divisor scheme has a universal property: it is the free formal group on the formal curve $\CP^\infty_E$.  Another avatar of this same fact is a description of the \emph{homology ring}, using the maps \[E_* BU(n) \otimes E_* BU(m) \to E_* BU(n+m)\] to induce a multiplicative structure on $E_* BU$:
+\begin{corollary}
+Let $E$ be a complex-orientable cohomology theory. Then: \[E_* BU \cong \Sym_{E_*} \widetilde E_* \CP^\infty.\]  A specific complex orientation of $E$ begets \[E_* \CP^\infty = E_*\{\beta_0, \beta_1, \ldots, \beta_n, \ldots\}\] and hence \[E_* BU = \Sym_{E_*} E_*\{\beta_1, \beta_2, \ldots\} = E_*[b_1, b_2, \ldots]. \qed\]
+\end{corollary} \oweproof{Free formal schemes agree with symmetric Hopf algebras on comodules}
+
+Thomifying these ``$\oplus$'' maps gives maps \[E_* MU(n) \otimes E_* MU(m) \to E_* MU(n+m),\] and the naturality of the $E$--Thom isomorphism produces an additional corollary:
+\begin{corollary}
+The Thom isomorphism $E_* BU \cong E_* MU$ respects both the $E_*$--module structure and the ring structure.  Hence, \[E_* MU \cong E_*[c_1, c_2, \ldots, c_n, \ldots],\] where $c_j$ is the image of $b_j$ under the Thom map. \qed
+\end{corollary}
+
+\noindent This compact description of $E_* MU$ as an algebra will be useful to us later, but right now we are interested in $E^* MU$ and especially in $MU^* MU$.  The former is \emph{not} a ring, and although the latter is a ring its multiplication is exceedingly complicated.  Instead, we will content ourselves with an $E_*$--module basis:
+\begin{definition}
+Let $\alpha = (\alpha_1, \ldots, \alpha_n, \ldots)$ denote a multi-index where every entry is nonnegative and almost every entry is zero, and let $c_\alpha$ denote the corresponding monomial \[c_\alpha = \prod_{j=1}^\infty c_j^{\alpha_j}.\]  Additionally, we let $s_\alpha \in E^* MU$ denote the image of $c_\alpha$ under the Thom isomorphism.  It is called the \textit{$\alpha${\th} Landweber--Novikov operation}.
+\end{definition}
+
+% Landweber--Novikov operations: the reason the ``total Chern class'' looks so unfamiliar is this: $E_* BU$ is polynomial means $E_* MU$ is polynomial, but $E^* BU$ being a nice algebra doesn't really tell you anything about $E^* MU$, since it's no longer an algebra.  so you really need an $E$--module basis of $E^* MU$, and that's what the nasty expansion of the total chern class is doing.
+
 
 
 
 give the specific model for complex bordism that Quillen uses.
-
-Landweber--Novikov operations: the reason the ``total Chern class'' looks so unfamiliar is this: $E_* BU$ is polynomial means $E_* MU$ is polynomial, but $E^* BU$ being a nice algebra doesn't really tell you anything about $E^* MU$, since it's no longer an algebra.  so you really need an $E$--module basis of $E^* MU$, and that's what the nasty expansion of the total chern class is doing.
 
 power operations in $MU$--cohomology.
 
