adds landweber-novikov properties

--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,7 @@
 \newcommand{\W}{\mathbb W}
 \newcommand{\m}{m}
 \renewcommand{\O}{\mathcal O}
+\renewcommand{\t}{\mathbf t}
 
 \newcommand{\<}{\langle}
 \renewcommand{\>}{\rangle}
