--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 
 %\usepackage{fullpage}
 \usepackage{amsmath,amssymb,amsfonts,amsthm,stmaryrd}
+\usepackage{hyperref}
 %\usepackage{stmaryrd}
 
 \usepackage{mathpazo} % math & rm
