fills in lecture 2.1

--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 
 
 \newcommand{\oweproof}[1]{\todo[color=red]{\textbf{You owe a proof of: } #1.}}
+\newcommand{\citeme}[1]{\todo[color=green]{\textbf{Cite me: } #1.}}
 
 
 
@@ -251,6 +252,22 @@ when describing Quillen's model, he makes a lot of use of Gysin maps and Thom / 
 \begin{definition}
 For a divisor $D$ on a curve $C$ over $X$ with pointing $\zeta: X \to C$, set the \textit{Thom sheaf} of $D$ to be the line bundle $L(D) = \zeta^* J(D)$ over $X$, with $J(D)$ the ideal sheaf on $C$ defining $D$.  It satisfies $L(D + D') = L(D) \otimes L(D')$.  If $C$ has a coordinate $x$, then $J(D)$ has a generator $f_D(x)$ and $L(D)$ also has a generator $u_D$, called the \textit{Thom class}.  It satisfies $u_{D + D'} = u_D \otimes u_{D'}$.
 \end{definition}
+
+
+
+
+\begin{theorem}\label{DetectingFormalVarieties}
+\todo{I think this theorem is motivated by Artin--Mazur formal groups, and the Crystals notes use it to extract a formal group from a Dieudonn\'e module.  Some motivation could go here.}Let $A$ be a Noetherian ring and $G: \CatOf{AdicAlgebras}_A \to \CatOf{AbelianGroups}$ be a functor such that
+\begin{enumerate}
+\item $G(A) = 0$.
+\item $G$ takes surjective maps to surjective maps.
+\item There is a finite, free $A$--module $M$ and a functorial isomorphism \[I \otimes_A M \to G(B) \to G(B')\] whenever $I$ belongs to a square-zero extension of adic $A$--algebras \[I \to B \to B'.\]
+\end{enumerate}
+Then, $G \cong \A^n$ as a functor to sets, where $n = \dim M$.
+\end{theorem}
+\begin{proof}
+This is 9.6.4 in the Crystals notes.
+\end{proof}
 
 
 
