--- a/quillen.tex
+++ b/quillen.tex
@@ -29,68 +29,121 @@ In particular, it follows that $E^* \CP^\infty$ is isomorphic to a one--dimensio
 
 In light of these theorems, it seems prudent to develop some of the theory of formal schemes and formal varieties.
 
-
-
 \begin{definition}
-Formal affine $n$--space is defined by \[\A^n = \Spf R\llbracket x_1, \ldots, x_n\rrbracket.\]  A \textit{formal affine variety} is a formal scheme $V$ which is (noncanonically) isomorphic to $\A^n$ for some $n$.  The two maps in an isomorphism pair \[V \to \A^n, \quad V \leftarrow \A^n\] are called a coordinate (system) and a parameter (system) respectively.
+Fix a scheme $S$.  A formal $S$--scheme $X = \{X_\alpha\}_\alpha$ is an ind-system of Artinian $S$--schemes $X_\alpha$.
 \end{definition}
 
-Maps between affine $n$--spaces
+\begin{remark}
+In the case $S = \Spec k$ for a field $k$, ``Artinian'' means that $\sheaf{O}_{X_\alpha}$ is a finite--dimensional $k$--vector space.
+\end{remark}
 
+These ind-systems arise when studying completions of rings.  To address the geometric situation, we first owe ourselves a definition of a closed subscheme, which we've somehow avoided up until this point:
 \begin{definition}
-Let $V$ be a formal variety and let $I_V = \A^1(V)$ be the ideal of functions vanishing at the origin.  Then, we define the \textit{cotangent space of $V$} at the origin by \[T^* V = I_V / I_V^2.\]  Similarly, a point $f \in V(R[t] / t^2)$ can be written as $f = f(0) + v(f) t$ where $v(f)$ is determined by the image of $f - f(0)$ in $T^* V$.  Hence, we define the \textit{tangent space of $V$} by \[TV = V(R[t] / t^2) \cong \CatOf{Modules}_R(T^* V, R).\]
+Let $X$ be an affine formal scheme, and pick a chart $\Spec R \to X$.  A subscheme $Y \subseteq X$ is called \textit{closed} when it has the form
+\begin{center}
+\begin{tikzcd}
+Y \arrow{r} \arrow[-,double,densely dotted]{d} & X \arrow[-,double]{d} \\
+\Spec (R/I) \arrow{r} & \Spec R.
+\end{tikzcd}
+\end{center}
 \end{definition}
 
-\begin{theorem}
-A map $f: V \to W$ of formal varieties is an isomorphism if and only if the induced map $Tf: TV \to TW$ is an isomorphism of $R$--modules.
+There's a dual notion of an open subscheme, which we will continue to avoid for now.  These definitions are both best stated in a coordinate--free way, but the open subscheme version really \emph{requires} it, so we will postpone it until later.\oweproof{Definition of open scheme}\oweproof{Definition of closed subscheme without chart}  For now, we will proceed with the geometry:
+
+\begin{definition}
+Consider such a closed subscheme $Y$ of an affine $S$--scheme $X$, modeled by a map $\Spec R/I \to \Spec R$.  We define the \textit{$n${\th} order neighborhood of $Y$ in $X$} to be the scheme $\Spec R/I^{n+1}$.  The \textit{formal neighborhood of $Y$ in $X$} is then the ind-system \[X^\wedge_Y := \left\{ \Spec R/I \to \Spec R/I^2 \to \Spec R/I^3 \to \cdots \right\}.\]
+\end{definition}
+
+\noindent So, formal schemes arise naturally when studying the local geometry of $X$ near a subscheme $Y$.  An exceedingly common situation is for $X$ to be a variety and $Y$ to be a smooth point, so that $X^\wedge_Y$ looks like ``a small piece of affine space''.  We pin this important case down with a definition:
+
+\begin{definition}
+In the case that $S = \Spec R$ is affine, formal affine $n$--space over $S$ is defined by \[\A^n = \Spf R\llbracket x_1, \ldots, x_n\rrbracket.\]  A \textit{formal affine variety} is a formal scheme $V$ which is (noncanonically) isomorphic to $\A^n$ for some $n$.  The two maps in an isomorphism pair \[V \to \A^n, \quad V \leftarrow \A^n\] are called a coordinate (system) and a parameter (system) respectively.
+\end{definition}
+
+\begin{lemma}\label{MapsOfFVarsArePowerSeries}
+A map $\A^n \to \A^m$ is specified by an $m$--tuple of $n$--variate power series. \qed \todo{Prove this?}
+\end{lemma}
+
+\begin{remark}
+In some sense, \Cref{MapsOfFVarsArePowerSeries} is a full explanation for why anyone would even think to involve formal geometry in algebraic topology (nevermind how useful the program has been in the long run).  Calculations in algebraic topology are frequently expressed in terms of power series rings, and with this Lemma formal geometry promises to give geometric interpretations to such objects.
+\end{remark}
+
+\Cref{MapsOfFVarsArePowerSeries} shows how formal varieties are especially nice, because maps between them can be boiled down to statements about power series.  In particular, this allows theorems from analytic differential geometry to be imported, including a version of the inverse function theorem, which we will now work towards.
+
+\begin{definition}
+Let $V$ be a formal variety and let $I_V = \A^1(V)$ be the ideal of functions vanishing at the origin.  Then, we define the \textit{cotangent space of $V$} at the origin by \[T^* V = I_V / I_V^2.\]
+\end{definition}
+
+\begin{definition}
+Similarly, a point $f \in V(R[t] / t^2)$ can be written as $f = f(0) + v(f) t$ where $v(f)$ is determined by the image of $f - f(0)$ in $T^* V$.  Hence, we define the \textit{tangent space of $V$} by \[TV = V(R[t] / t^2) \cong \CatOf{Modules}_R(T^* V, R).\]
+\end{definition}
+
+\begin{theorem}\label{InverseFunctionTheoremForFVars}\citeme{This is 3.1.8 in the Crystals notes.}
+A map $f: V \to W$ of finite--dimensional formal varieties is an isomorphism if and only if the induced map $Tf: TV \to TW$ is an isomorphism of $R$--modules.
 \end{theorem}
 \begin{proof}
-This is 3.1.8 in the Crystals notes.
+First, reduce to the case where $V \cong \A^n$ and $W \cong \A^n$ have the same dimension, and select charts for both.  Then, $Tf$ is a matrix of dimension $n \times n$.  If $Tf$ fails to be invertible, we are done, and if it is invertible, we replace $f$ by $f \circ (Tf)^{-1}$ so that $Tf$ is the identity matrix.
+
+We now construct the inverse function by induction on degree.  Set $g^{(1)}$ to be the identity function, so that $f$ and $g^{(1)}$ are mutual inverses when restricted to the first-order neighborhood.  So, suppose that $g^{(r-1)}$ has been constructed, and consider its interaction with $f$ on the $r${\th} order neighborhood: \[g_i^{(r-1)}(f(x)) = x_i + \sum_{|J| = r} c_J x_1^{J_1} \cdots x_n^{J_n} + o(r+1). \]  By adding in the correction term \[g_i^{(r)} = g_i^{(r-1)} - \sum_{|J| = R} c_J x_1^{J_1} \cdots x_n^{J_n},\] we have $g_i^{(r)}(f(x)) = x_i + o(r)$.
 \end{proof}
 
-\begin{remark}
-You can get formal varieties by completing varieties.
-\end{remark}
+We now return to our motivating example of $\CP^\infty_E$ for $E$ a complex-oriented cohomology theory, where we saw that the complex-orientation determines an isomorphism $\CP^\infty_E \cong \A^1$.  However, the object ``$E^* \CP^\infty$'' is something that exists independent of the orientation map $MU \to E$, and we now have the language to tease apart this situation:
+\begin{lemma}
+Suppose that $E$ is a \textit{complex orientable} cohomology theory, i.e., it is able to receive a ring map from $MU$.  In that case, $\CP^\infty_E$ is a formal curve.  A choice of map $MU \to E$ determines a coordinate $\CP^\infty_E \cong \A^1$. \qed
+\end{lemma}
 
-\todo{You can also get formal varieties using this detection theorem...}
+As we saw in the first case study, $\CP^\infty_E$ has more structure than just a formal scheme: it also carries the structure of a group.  We close today with some remarks about such objects.
 
-\begin{theorem}\label{DetectingFormalVarieties}
-\todo{I think this theorem is motivated by Artin--Mazur formal groups, and the Crystals notes use it to extract a formal group from a Dieudonn\'e module.  Some motivation could go here.}Let $A$ be a Noetherian ring and $G: \CatOf{AdicAlgebras}_A \to \CatOf{AbelianGroups}$ be a functor such that
-\begin{enumerate}
-\item $G(A) = 0$.
-\item $G$ takes surjective maps to surjective maps.
-\item There is a finite, free $A$--module $M$ and a functorial isomorphism \[I \otimes_A M \to G(B) \to G(B')\] whenever $I$ belongs to a square-zero extension of adic $A$--algebras \[I \to B \to B'.\]
-\end{enumerate}
-Then, $G \cong \A^n$ as a functor to sets, where $n = \dim M$.
-\end{theorem}
-\begin{proof}
-This is 9.6.4 in the Crystals notes.
-\end{proof}
-
-\begin{definition}
-A formal group is a formal variety endowed with an abelian group structure.\footnote{Formal groups in dimension $1$ are automatically commutative if and only if the ground ring has no elements which are simultaneously nilpotent and torsion.  \textbf{Cite this.}}
+\begin{definition}\citeme{Theorem 2.2.6 of the Crystals notes}
+A formal group is a formal variety endowed with an abelian group structure.\footnote{Formal groups in dimension $1$ are automatically commutative if and only if the ground ring has no elements which are simultaneously nilpotent and torsion.}
 \end{definition}
 
 \begin{remark}
-\todo{Discuss the connection between formal groups with coordinates and formal group laws.  Introduce FGL notation.}
+As with formal schemes, formal groups can arise as formal completions of an algebraic group at its identity point.  It turns out that there are many more formal groups than come from this procedure, a phenomenon that will be of keen interest to us.
 \end{remark}
 
-\begin{remark}
-Formal groups automatically have inverses.
-\end{remark}
+\begin{definition}
+Let $\G$ be a formal group.  In the presence of a coordinate $\phi \co \G \cong \A^n$, the addition law on $\G$ begets a map
+\begin{center}
+\begin{tikzcd}
+\G \times \G \arrow{r} \arrow[-,double]{d} & \G \arrow[-,double]{d} \\
+\A^n \times \A^n \arrow{r} & \A^n,
+\end{tikzcd}
+\end{center}
+and hence a $n$-tuple of $(2n)$-variate power series ``$+_\phi$'', satisfying
+\begin{align*}
+\underline{\smash x} +_\phi \underline{\smash y} & = \underline{\smash y} +_\phi \underline{\smash x}, & \text{(commutativity)} \\
+\underline{\smash x} +_\phi \underline{\smash 0} & = \underline{\smash x}, & \text{(unitality)} \\
+\underline{\smash x} +_\phi (\underline{\smash y} +_\phi \underline{\smash z}) & = (\underline{\smash x} +_\phi \underline{\smash y}) +_\phi \underline{\smash z}. & \text{(associativity)}
+\end{align*}
+Such a tuple $+_\phi$ is called a \textit{formal group law}.
+\end{definition}
 
-\begin{remark}
-You can get formal groups from completions of algebraic groups.
-\end{remark}
+\begin{corollary}
+The formal group addition map on $\G$ determines the inverse law.
+\end{corollary}
+\begin{proof}
+Consider the shearing map
+\begin{align*}
+\G \times \G & \xrightarrow{\sigma} \G \times \G, \\
+(x, y) & \mapsto (x, x + y).
+\end{align*}
+The induced map $T\sigma$ on tangent spaces is evidently invertible, so by \Cref{InverseFunctionTheoremForFVars} there is an inverse map $(x, y) \mapsto (x, y - x)$.  Setting $y = 0$ and projecting to the second factor gives the inversion map.
+\end{proof}
+
+\begin{example} \todo{Expand me. This is a good way to close the day.}
+$\CP^\infty_{H\Z P} \cong \G_a$.  $\CP^\infty_{KU} \cong \G_m$.
+\end{example}
+
+
+-----
+
+
 
 Quillen's theorem needs to know that rational formal groups have logarithms.  Now is a good time to prove that?  Or maybe this comes later.  If it comes here, it would be good to give the version that uses the tangent space:
 \begin{theorem}
 There is a unique isomorphism \[\G \xrightarrow{\log} \operatorname{Lie} \G \otimes \G_a.\]
 \end{theorem}
-
-\begin{example}
-$\CP^\infty_{H\Z P} \cong \G_a$.  $\CP^\infty_{KU} \cong \G_m$.
-\end{example}
 
 \begin{definition}
 The module of K\"ahler differentials on a $k$--algebra $R$ is given by \todo{Put formula here.}.
@@ -115,18 +168,7 @@ Today won't really involve any algebraic topology.  Instead, we are going to tal
 \item $\zeta: X \to C$ is a distinguished point on $C$.
 \end{itemize}
 
-First, we owe ourselves a definition of a closed subscheme, which we've somehow avoided up until this point:
-\begin{definition}
-Let $Y$ be an affine formal scheme, and pick a chart $\Spec R \to Y$.  A subscheme $Z \subseteq Y$ is called \textit{closed} when it has the form
-\begin{center}
-\begin{tikzcd}
-Z \arrow{r} \arrow[-,double,densely dotted]{d} & Y \arrow[-,double]{d} \\
-\Spec (R/I) \arrow{r} & \Spec R.
-\end{tikzcd}
-\end{center}
-\end{definition}
-
-There's a dual notion of an open subscheme, which we will continue to avoid for now.  These definitions are both best stated in a coordinate--free way, but the open subscheme version really \emph{requires} it, so we will postpone it until later.\oweproof{Definition of open scheme}\oweproof{Definition of closed subscheme without chart}  For now, this is already enough to get a working definition of a divisor:
+Recall that yesterday we defined what it meant for a subscheme to be closed.  The notion of a divisor on a formal curve is a particular sort of closed subscheme:
 
 \begin{definition}
 An \textit{effective Weil divisor} of rank $n$ on $C$ is an $X$--subscheme of $C$ whose ring of functions is rank $n$ as an $\sheaf{O}_X$--module.
@@ -672,6 +714,6 @@ We know that $\delta$ is surjective by the arguments about the subring $C$.  On 
 \end{proof}
 
 
-\subsection*{Lazard's theorem}
+\section*{Lazard's theorem}
 
 This should have a clever ``The structure of $\moduli{fg}$'' name.
