--- a/main.tex
+++ b/main.tex
@@ -123,6 +123,8 @@
 
 \begin{document}
 
+\frontmatter
+
 \maketitle
 
 \textbf{Class information}
@@ -153,6 +155,12 @@ to request write access.
 \newpage
 
 \tableofcontents
+
+
+
+
+
+\mainmatter
 
 \include{intro}
 
@@ -213,13 +221,26 @@ The practical approach: projective generators of finite Hopf algebras
 
 
 
+\chapter{Power operations}
+
+\section{Strickland's theorem}
+
+\section{$p$--divisible groups}
+
+\section{The Drinfel'd ring}
+
+\section{HKR characters}
+
+\section{Ando coordinates}
 
 
 
 
 
 
-\section*{Material for lecture}
+\backmatter
+
+\chapter*{Material for lecture}
 
 
 
