spawns tex files for the other chapters, now that their contents is somewhat more pinned down

--- a/main.tex
+++ b/main.tex
@@ -177,62 +177,11 @@ to request write access.
 
 \include{finite}
 
-
-
-
-
-
-
-\chapter{Unstable cooperations}
-
-
-\section{The Ravenel-Wilson calculations}
-
-$BS^1[p^j]_{K(n)} = BS^1_{K(n)}[p^j]$
-
-Coalgebraic rings and ring-valued affine schemes
-
-The bar spectral sequence, naturality
-
-$K(n)_* K(\Z/p^j, q) = \operatorname{Alt}^q BS^1_{K(n)}[p^j]$
-
-The calculation of the Hopf ring $H_* MU_*$
-
-Goerss's result on $H_* E_*$ for Landweber flat $E$
-
-
-\section{Dieudonn\'e modules}
-
-Curves on a formal group
-
-The de Rham crystal of a formal group
-
-The practical approach: projective generators of finite Hopf algebras
-
-\section{Coalgebraic formal schemes}
-
-
-
-
+\include{cooperations}
 
 \include{sigma}
 
-
-
-
-
-\chapter{Power operations}
-
-\section{Strickland's theorem}
-
-\section{$p$--divisible groups}
-
-\section{The Drinfel'd ring}
-
-\section{HKR characters}
-
-\section{Ando coordinates}
-
+\include{hinfty}
 
 
 
