add a couple of things to the sigma orientation chapter

--- a/sigma.tex
+++ b/sigma.tex
@@ -10,3 +10,7 @@
 \section{Divisors and line bundles}
 
 \section{Weil pairings}
+
+\section{The Atiyah--Bott--Shapiro orientation}
+
+\section{The symmetric cocycle schemes}
