various ideas for the later sections

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -29,3 +29,5 @@ The de Rham crystal of a formal group
 The practical approach: projective generators of finite Hopf algebras
 
 \section{Coalgebraic formal schemes}
+
+Cartier duality
