--- a/finite.tex
+++ b/finite.tex
@@ -12,6 +12,8 @@ still need to talk about closed and open subschemes, their basic properties
 
 \section{The context of a spectrum}
 
+\citeme{Pridham's article \textit{Presenting higher stacks as simplicial schemes} seems like a good reference.}
+
 The bar complex and $A_\infty$ ring spectra
 
 The descent object for the unit map $\S \to E$:
