more work around the tail of quillen’s main relation. i feel a little better about it, but i still have questions, which i made note of.

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -5,6 +5,15 @@
 
 \section{The Ravenel-Wilson calculations}
 
+\section{Dieudonn\'e modules}
+
+\section{Coalgebraic formal schemes}
+
+
+
+
+\section*{Things that belong in this section}
+
 $BS^1[p^j]_{K(n)} = BS^1_{K(n)}[p^j]$
 
 Coalgebraic rings and ring-valued affine schemes
@@ -19,15 +28,10 @@ Goerss's result on $H_* E_*$ for Landweber flat $E$
 
 Ravenel--Wilson on $MU_* \OS{MU}{*}$ and $H_* \OS{MU}{*}$
 
-
-\section{Dieudonn\'e modules}
-
 Curves on a formal group
 
 The de Rham crystal of a formal group
 
 The practical approach: projective generators of finite Hopf algebras
-
-\section{Coalgebraic formal schemes}
 
 Cartier duality
