moves dates into chapter 2, now that it’s more stable

--- a/quillen.tex
+++ b/quillen.tex
@@ -6,7 +6,7 @@
 \todo{Write an introduction for me.}
 
 
-\section{Formal varieties}
+\section{Feb 8: Formal varieties}
 
 Having totally dissected unoriented bordism, we can now turn our attention to other sorts of bordism theories, and there are many available: oriented, $\Spin$, $\String$, complex, \ldots.  We would like to replicate the results from \Cref{UnorientedBordismChapter} for these other contexts, but we quickly see that only one of the listed bordism theories supports this program.  The space $\RP^\infty = BO(1)$ was a key player in the unoriented bordism story, and the only other bordism theory with a similar ground object is complex bordism, with $\CP^\infty = BU(1)$.  So, we will focus on it.
 
@@ -172,7 +172,7 @@ Sheaves on formal schemes too?
 
 
 
-\section{Divisors and divisor schemes}
+\section{Feb 10: Divisors and divisor schemes}
 
 Today won't really involve any algebraic topology.  Instead, we are going to talk about a certain class of subschemes called ``divisors''.  These play an important role in the theory of complex-oriented cohomology theories, and they're sufficiently complicated that they deserve their own day.  Throughout today, we will have fixed the following three pieces of data:
 \begin{itemize}
@@ -283,7 +283,7 @@ Now let $j: C \to \Div C$ be the usual inclusion, and for a point $a \in C(R)$ s
 
 
 
-\section{Chern classes and divisor schemes}\todo{This title needs improvement.}
+\section{Feb 12: Chern classes and divisor schemes}\todo{This title needs improvement.}
 
 Having built up some of the background theory of formal varieties, today we're going to pursue another standard calculation for complex-oriented cohomology theories $E$.  Recall our motivating theorem:
 \begin{corollary}[{\Cref{CPinftyNiceCalculation}}]
@@ -415,7 +415,7 @@ By the splitting principle, it is enough to check this on sums of line bundles. 
 
 
 
-\section{Operations and a model for cobordism}
+\section{Feb 17: Operations and a model for cobordism}
 
 Our eventual goal, like last time, is to give an algebro-geometric description of $MU_*(*)$ and of the cooperations $MU_* MU$.  There is such a description that passes through the Adams spectral sequence, also like last time, but $MU_*(*)$ is an integral algebra and so we cannot make do with working out the mod--$2$ Adams spectral sequence.  We would have to at least work out the mod--$p$ Adams spectral sequence for every $p$, but there is the following unfortunate theorem:
 \begin{theorem}
@@ -536,7 +536,7 @@ The chain model for ordinary homology is actually rigid enough to define power o
 
 
 
-\section{Quillen's theorem}
+\section{Feb 19: Quillen's theorem}
 
 Our goal today is to apply a version of \Cref{PushPullFormulaForMU} to the push-pull definition of the power operation for $MU$ given in \Cref{DefnPowerOperationForMU}.  The relevant Cartesian square in that case has the form
 \begin{center}
